--- a/index.html
+++ b/index.html
@@ -5,27 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:700|Raleway:200,200i,300" rel="stylesheet">
+  <!-- font-family: 'Raleway', sans-serif;
+  font-family: 'Merriweather', serif; -->
   <link href="styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
 
     <!-- NAVIGATION BAR BEGINS HERE -->
-    <div>
+    <header>
+      <div class="navbar">
+        <label for="nav-toggle" class="nav-toggle-label"><span></span></label>
+        <div class="logo-container" ><a href="http://via.placeholder.com/100x100"><img src="http://via.placeholder.com/100x100" alt="logo" id="nav-logo"></a></div>
+      </div>
+      <input type="checkbox" name="nav-toggle" value="" id="nav-toggle">
       <nav>
         <ul>
-          <li>Back</li>
-          <li>About</li>
-          <li>Works</li>
-          <li>Resume</li>
-          <li>Reading list</li>
+          <li><a href="">Back</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Works</a></li>
+          <li><a href="">Resume</a></li>
+          <li><a href="">Reading list</a></li>
         </ul>
       </nav>
-    </div>
+
+    </header>
 
     <!-- LANDING BIG TEXT HERE, POSSIBLY DESKTOP ONLY -->
-    <div>
-      <div class="logo-container"><a href="http://via.placeholder.com/100x100"><img src="http://via.placeholder.com/100x100" alt="logo"></a></div>
+    <div class="landing-page">
+      <div class="logo-container" ><a href="http://via.placeholder.com/100x100"><img src="http://via.placeholder.com/100x100" alt="logo" id="initial-logo"></a></div>
       <div class="welcome-container">
         <h1 class="welcome-Text">Welcome!</h1>
         <h2>I'm Miguel Maramara</h2>
@@ -34,23 +43,24 @@
     </div>
 
     <!-- ACTUAL CONTENT GOES HERE -->
-    <div id="about">
-      <h3>About</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt eum illum ex, inventore sed non natus rerum fuga! Esse aut accusantium accusamus veniam nobis placeat unde velit, quos et error.</p>
+    <div class="content">
+      <div id="about">
+        <h3>About</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt eum illum ex, inventore sed non natus rerum fuga! Esse aut accusantium accusamus veniam nobis placeat unde velit, quos et error.</p>
+      </div>
+      <div id="works">
+        <h3>Works</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, commodi pariatur quaerat totam! Blanditiis cumque assumenda asperiores dolorem, explicabo consequuntur aperiam id sunt quisquam odit quidem repellat, repudiandae magni iste.</p>
+      </div>
+      <div id="resume">
+        <h3>Resume</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis laudantium nisi modi quaerat? Non delectus sint veniam autem aut, explicabo ipsam amet officia quaerat porro, neque molestiae maxime nisi a.</p>
+      </div>
+      <div id="reading-list">
+        <h3>Reading List</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis unde, culpa, provident animi error beatae fuga mollitia aperiam ipsa voluptas, architecto dignissimos omnis expedita magnam inventore itaque quod fugit a!</p>
+      </div>
     </div>
-    <div id="works">
-      <h3>Works</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, commodi pariatur quaerat totam! Blanditiis cumque assumenda asperiores dolorem, explicabo consequuntur aperiam id sunt quisquam odit quidem repellat, repudiandae magni iste.</p>
-    </div>
-    <div id="resume">
-      <h3>Resume</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis laudantium nisi modi quaerat? Non delectus sint veniam autem aut, explicabo ipsam amet officia quaerat porro, neque molestiae maxime nisi a.</p>
-    </div>
-    <div id="reading-list">
-      <h3>Reading List</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis unde, culpa, provident animi error beatae fuga mollitia aperiam ipsa voluptas, architecto dignissimos omnis expedita magnam inventore itaque quod fugit a!</p>
-    </div>
-
   </div>
 </body>
 </html>
