Added Color and began working on the desktop version of the website

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <nav>
         <ul>
           <li><a href="">Back</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Works</a></li>
-          <li><a href="">Resume</a></li>
-          <li><a href="">Reading list</a></li>
+          <li><a href=".about">About</a></li>
+          <li><a href=".works">Works</a></li>
+          <li><a href=".resume">Resume</a></li>
+          <li><a href=".reading-list">Reading list</a></li>
         </ul>
       </nav>
 
@@ -44,21 +44,29 @@
 
     <!-- ACTUAL CONTENT GOES HERE -->
     <div class="content">
-      <div id="about">
-        <h3>About</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt eum illum ex, inventore sed non natus rerum fuga! Esse aut accusantium accusamus veniam nobis placeat unde velit, quos et error.</p>
+      <div class="about sub-content">
+        <div class="text about-text">
+          <h3>About</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt eum illum ex, inventore sed non natus rerum fuga! Esse aut accusantium accusamus veniam nobis placeat unde velit, quos et error.</p>
+        </div>
+    </div>
+      <div class="works sub-content">
+        <div class="text work-text">
+          <h3>Works</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, commodi pariatur quaerat totam! Blanditiis cumque assumenda asperiores dolorem, explicabo consequuntur aperiam id sunt quisquam odit quidem repellat, repudiandae magni iste.</p>
+        </div>
       </div>
-      <div id="works">
-        <h3>Works</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, commodi pariatur quaerat totam! Blanditiis cumque assumenda asperiores dolorem, explicabo consequuntur aperiam id sunt quisquam odit quidem repellat, repudiandae magni iste.</p>
+      <div class="resume sub-content">
+        <div class="text resume-text">
+          <h3>Resume</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis laudantium nisi modi quaerat? Non delectus sint veniam autem aut, explicabo ipsam amet officia quaerat porro, neque molestiae maxime nisi  </p>
+        </div>
       </div>
-      <div id="resume">
-        <h3>Resume</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis laudantium nisi modi quaerat? Non delectus sint veniam autem aut, explicabo ipsam amet officia quaerat porro, neque molestiae maxime nisi a.</p>
-      </div>
-      <div id="reading-list">
-        <h3>Reading List</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis unde, culpa, provident animi error beatae fuga mollitia aperiam ipsa voluptas, architecto dignissimos omnis expedita magnam inventore itaque quod fugit a!</p>
+      <div class="reading-list sub-content">
+        <div class="text resume-text">
+          <h3>Reading List</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis unde, culpa, provident animi error beatae fuga mollitia aperiam ipsa voluptas, architecto dignissimos omnis expedita magnam inventore itaque quod fugit a!</p>
+        </div>
       </div>
     </div>
   </div>
