Completed the nav bar(s) and spacing.
Navigation bar is now fully responsive! I'm thinking of my logo being like "M/m" or something like that!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:700|Raleway:200,200i,300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:700|Raleway:200,200i,300,600" rel="stylesheet">
   <!-- font-family: 'Raleway', sans-serif;
   font-family: 'Merriweather', serif; -->
   <link href="styles.css" type="text/css" rel="stylesheet">
@@ -20,7 +20,10 @@
         <div class="logo-container" ><a href="http://via.placeholder.com/100x100"><img src="http://via.placeholder.com/100x100" alt="logo" id="nav-logo"></a></div>
       </div>
       <input type="checkbox" name="nav-toggle" value="" id="nav-toggle">
+      <!-- TODO: Check to see if you need either header spacers -->
+      <!-- <div class="spacer header-spacer-1"></div> -->
       <nav>
+        <div class="spacer nav-spacer-1"></div>
         <ul>
           <li><a href="">Back</a></li>
           <li><a href=".about">About</a></li>
@@ -28,8 +31,11 @@
           <li><a href=".resume">Resume</a></li>
           <li><a href=".reading-list">Reading list</a></li>
         </ul>
+        <div class="spacer nav-spacer-2"></div>
       </nav>
-
+      <!-- <div class="spacer header-spacer-2"></div> -->
+      <div class="social-media">
+      </div>
     </header>
 
     <!-- LANDING BIG TEXT HERE, POSSIBLY DESKTOP ONLY -->
