--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:700|Raleway:200,200i,300,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:700|Raleway:200,200i,600" rel="stylesheet">
   <!-- font-family: 'Raleway', sans-serif;
   font-family: 'Merriweather', serif; -->
   <link href="styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
+  <div class="container" id="top">
 
     <!-- NAVIGATION BAR BEGINS HERE -->
     <header>
       <div class="navbar">
         <label for="nav-toggle" class="nav-toggle-label"><span></span></label>
-        <div class="logo-container" ><a href="http://via.placeholder.com/100x100"><img src="http://via.placeholder.com/100x100" alt="logo" id="nav-logo"></a></div>
+        <div class="logo-container" ><a href="#top"><img src="logo-black-and-white.png" alt="logo" id="nav-logo"></a></div>
       </div>
       <input type="checkbox" name="nav-toggle" value="" id="nav-toggle">
       <!-- TODO: Check to see if you need either header spacers -->
@@ -40,7 +40,7 @@
 
     <!-- LANDING BIG TEXT HERE, POSSIBLY DESKTOP ONLY -->
     <div class="landing-page">
-      <div class="logo-container" ><a href="http://via.placeholder.com/100x100"><img src="http://via.placeholder.com/100x100" alt="logo" id="initial-logo"></a></div>
+      <div class="logo-container" ><a href="#top"><img src="logo-black-and-white.png" alt="logo" id="initial-logo"></a></div>
       <div class="welcome-container">
         <h1 class="welcome-Text">Welcome!</h1>
         <h2>I'm Miguel Maramara</h2>
@@ -76,5 +76,10 @@
       </div>
     </div>
   </div>
+
+  <!-- JS BEGINS HERE -->
+
+  <script src="main.js"></script>
+
 </body>
 </html>
