adjusted the website to adjust better to phones

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div class="spacer nav-spacer-1"></div>
         <ul>
           <li><a href="">Back</a></li>
-          <li><a href=".about">About</a></li>
-          <li><a href=".works">Works</a></li>
-          <li><a href=".resume">Resume</a></li>
-          <li><a href=".reading-list">Reading list</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#works">Works</a></li>
+          <li><a href="#resume">Resume</a></li>
+          <li><a href="#reading-list">Reading list</a></li>
         </ul>
         <div class="spacer nav-spacer-2"></div>
       </nav>
@@ -55,7 +55,7 @@
     ------------------------->
 
     <!-- About section -->
-    <div class="section-container">
+    <div class="section-container" id="about">
       <section class="about section">
         <div class="content content-about">
           <h1>About</h1>
@@ -107,19 +107,19 @@
           </div>
         </div>
       </section>
-      <section class="works section">
+      <section class="works section" id="works">
         <div class="content content-work">
           <h1>Works</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, commodi pariatur quaerat totam! Blanditiis cumque assumenda asperiores dolorem, explicabo consequuntur aperiam id sunt quisquam odit quidem repellat, repudiandae magni iste.</p>
         </div>
       </section>
-      <section class="resume section">
+      <section class="resume section" id="resume">
         <div class="content content-resume">
           <h1>Resume</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis laudantium nisi modi quaerat? Non delectus sint veniam autem aut, explicabo ipsam amet officia quaerat porro, neque molestiae maxime nisi  </p>
         </div>
       </section>
-      <section class="reading-list section">
+      <section class="reading-list section" id="reading-list">
         <div class="content content-reading-list">
           <h1>Reading List</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis unde, culpa, provident animi error beatae fuga mollitia aperiam ipsa voluptas, architecto dignissimos omnis expedita magnam inventore itaque quod fugit a!</p>
