--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
       </div>
       <input type="checkbox" name="nav-toggle" value="" id="nav-toggle">
       <nav>
-
         <div class="spacer nav-spacer-1"></div>
         <ul>
           <li><a href="">Back</a></li>
@@ -52,7 +51,7 @@
 
     <!--
     ACTUAL CONTENT GOES HERE
-    ------------------------->
+    -->
 
     <!-- About section -->
     <div class="section-container" id="about">
@@ -109,20 +108,26 @@
       </section>
       <section class="works section" id="works">
         <div class="content content-work">
-          <h1>Works</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, commodi pariatur quaerat totam! Blanditiis cumque assumenda asperiores dolorem, explicabo consequuntur aperiam id sunt quisquam odit quidem repellat, repudiandae magni iste.</p>
+          <div class="column work-column work-column1">
+            <h1>Works</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, commodi pariatur quaerat totam! Blanditiis cumque assumenda asperiores dolorem, explicabo consequuntur aperiam id sunt quisquam odit quidem repellat, repudiandae magni iste.</p>
+          </div>
         </div>
       </section>
       <section class="resume section" id="resume">
         <div class="content content-resume">
-          <h1>Resume</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis laudantium nisi modi quaerat? Non delectus sint veniam autem aut, explicabo ipsam amet officia quaerat porro, neque molestiae maxime nisi  </p>
+          <div class="column resume-column resume-column1">
+            <h1>Resume</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis laudantium nisi modi quaerat? Non delectus sint veniam autem aut, explicabo ipsam amet officia quaerat porro, neque molestiae maxime nisi  </p>
+          </div>
         </div>
       </section>
       <section class="reading-list section" id="reading-list">
         <div class="content content-reading-list">
-          <h1>Reading List</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis unde, culpa, provident animi error beatae fuga mollitia aperiam ipsa voluptas, architecto dignissimos omnis expedita magnam inventore itaque quod fugit a!</p>
+          <div class="column reading-list-column reading-list-column1">
+            <h1>Reading List</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis unde, culpa, provident animi error beatae fuga mollitia aperiam ipsa voluptas, architecto dignissimos omnis expedita magnam inventore itaque quod fugit a!</p>
+          </div>
         </div>
       </section>
     </div>
